2008-04-16  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_unix/Makefile.am: Link unix_chkpwd with libaudit.
	
	* modules/pam_unix/unix_chkpwd.c(_audit_log): New function for audit.
	(main): Call _audit_log() when appropriate.

2008-04-08  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_xauth/pam_xauth.c(run_coprocess): Avoid multiple
	calls to sysconf() (based on patch by Sami Farin).

        * libpam/pam_item.c (TRY_SET): Do not set when destination
        is identical to source.
        (pam_set_item): Do not overwrite destination when it
        is identical to source.

2008-04-07  Miloš Komarčević <kmilos@gmail.com>

	* po/sr.po: New file with translation.
	* po/sr@latin.po: Likewise.
	* po/LINGUAS: Add sr and sr@latin.

2008-03-25  Leah Liu <lliu@redhat.com>

	* po/zh_CN.po: Updated translation.

2008-04-03  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 1.0.0

	* configure.in: Set version number to 1.0.0.
	* libpam/Makefile.am: Bump patchlevel of libpam.
	* doc/adg/Linux-PAM_ADG.xml: Update version/date.
	* doc/mwg/Linux-PAM_MWG.xml: Likewise.
	* doc/sag/Linux-PAM_SAG.xml: Likewise.

2008-03-31  Dan Walsh <dwalsh@redhat.com>

	* modules/pam_sepermit/pam_sepermit.c(sepermit_lock): Mark lock fd to
	be closed on exec.

2008-03-25  Leah Liu <lliu@redhat.com>

	* po/zh_CN.po: Updated translation.

2008-03-20  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_namespace/pam_namespace.c(poly_name): Switch to USER
	method only when appropriate.
	(setup_namespace): Do not umount when not mounted with RUSER.
	
	* modules/pam_selinux/pam_selinux.c(pam_sm_close_session): Call
	freecontext() after the context is logged not before.

2008-03-18  Canniot Thomas <thomas.canniot@mrtomlinux.org>

	* po/fr.po: Updated translation.

2008-03-13  Ankit Patel <ankit@redhat.com>

	* po/gu.po: Updated translation.

2008-03-05  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_cracklib/pam_cracklib.c(pam_sm_chauthtok): Avoid
	unnecessary x_strdup() of resp.